--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_ca.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=Deixeu anar un fitxer LAR a importar
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Ja existeix una estructura d'associació de dades dinàmiques amb clau {0}.
 enabled-on-private-pages=Activat per pàgines privades
 enabled-on-public-pages=Activat per pàgines públiques
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Plantilla d'importació/exportació (Automatic Translation)
 export-import-portlet-permissions-help=Si se selecciona aquesta opció, els permisos asignats al mòdul de portal exportat seran incluïts.
 export-import-theme-settings-help=Quan se selecciona per exportar, l'esquema i els colors del tema escollits per al lloc estan inclosos en els arxius LAR resultants. Quan se selecciona per importar, la configuració i l'esquema de colors del tema són importats i totes les pàgines estan configurades per usar-les.
 export-individual-deletions=Exportació Individual supressions (Automatic Translation)
@@ -86,6 +88,7 @@ new-publish-template=Nova plantilla de publicació
 no-export-processes-were-found=No s'ha trobat camp procés d'exportació.
 no-import-processes-were-found=No s'ha trobat cap procés d'importació.
 no-pages=Les meves pàgines
+no-processes-were-found=Es trobaren cap procés. (Automatic Translation)
 no-publication-processes-were-found=No s'ha trobat cap procés de publicació.
 no-scheduled-publication-processes-were-found=No s'ha trobat cap procés de publicació programat.
 none-empty-site-pages-variation=Cap (Variant de pàgines del lloc buida)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=Aquesta versió es pu
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=No s'ha pogut activa l'entorn de proves remot en el lloc amb ID {0}. Només es pot activar l'entor de proves remot d'un lloc global a un altre lloc global.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=No s'ha pogut activar l'entorn de proves remot en el lloc web amb l'ID {0}. L'entorn Live del lloc ha de ser diferent al de l'entorn de proves.
 unable-to-execute-process-x=No s'ha pogut executar el procés ({0}).
-untitled=Sense títol
 untitled-scheduled-publication=Publicació programada sense títol
 update-data=Actualitza les dades
 update-page-variation=Actualitza la variació de la pàgina
@@ -169,7 +171,21 @@ update-site-pages-variation=Actualitza la variació de les pàgines d'aquest llo
 view-page-staging-options=Veure les opcions de l'entorn de proves
 view-source=Veure font
 x,-created-x-ago={0}, creat fa {1}.
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} té staging.
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=Actualment esteu revisant aquesta pàgina. Podeu realitzar canvis i enviar-los al pas següent quan ho creieu convenient.
 you-can-also-forcibly-disable-remote-staging=També pot <a href={0}">desactivar per la força</a> una còpia intermèdia remota.
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=No podeu enviar els canvis perquè algú altre ja n'ha enviat per aprovar.
