--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_de.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=LAR-Datei für den Import hierher ziehen
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Die Struktur für dynamische Datenzuordnungen mit dem Schlüssel {0} existiert bereits.
 enabled-on-private-pages=Auf private Seiten aktiviert
 enabled-on-public-pages=Auf öffentlichen Seiten aktiviert
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Export/Import Template (Automatic Copy)
 export-import-portlet-permissions-help=Ist diese Option ausgewählt, werden Berechtigungen für das exportierte Portletfenster berücksichtigt.
 export-import-theme-settings-help=Ist diese Option während eines Exports aktiviert, werden das für die Site gewählte Theme und Farbschema in die resultierende LAR-Datei einbezogen. Ist diese Option während eines Imports aktiviert, werden Einstellungen zu Theme und Farbschema importiert und für alle Seiten genutzt.
 export-individual-deletions=Export Individual Deletions (Automatic Copy)
@@ -86,6 +88,7 @@ new-publish-template=Neue Publikationsvorlage
 no-export-processes-were-found=Es wurden keine Exportprozesse gefunden.
 no-import-processes-were-found=Es wurden keine Importprozesse gefunden.
 no-pages=Keine Seiten
+no-processes-were-found=No processes were found. (Automatic Copy)
 no-publication-processes-were-found=Es wurden keine Publikationsprozesse gefunden.
 no-scheduled-publication-processes-were-found=Es wurden keine geplanten Publikationsprozesse gefunden.
 none-empty-site-pages-variation=Keine (Leere sitespezifische Seitenvariation)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=Diese Version wird ve
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Remotestaging kann auf der Site mit der ID {0} nicht aktiviert werden. Das Staging von globalen Sites ist nur mit anderen globalen Sites möglich.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Remotestaging kann auf der Site mit der ID {0} nicht aktiviert werden. Die Remote-Livesite muss sich von der Stagingsite unterscheiden.
 unable-to-execute-process-x=Prozess kann nicht ausgeführt werden ({0}).
-untitled=Unbenannt
 untitled-scheduled-publication=Unbenannte geplante Publikation
 update-data=Daten aktualisieren
 update-page-variation=Seitenvariation aktualisieren
@@ -169,7 +171,21 @@ update-site-pages-variation=Sitespezifische Seitenvariation aktualisieren
 view-page-staging-options=Stagingoptionen der Seite anzeigen
 view-source=Quelle anzeigen
 x,-created-x-ago={0}, erstellt vor {1}.
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} ist dem Publikationsprozess unterworfen.
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=Sie rezensieren gerade diese Seite. Änderungen können durchgeführt und als nächster Schritt in den Workflow übergeben werden.
 you-can-also-forcibly-disable-remote-staging=Sie können die Deaktivierung von Remotestaging auch <a href="{0}">erzwingen</a>.
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=Sie können keine Änderungen einreichen, weil jemand anderes bereits Änderungen zur Genehmigung eingereicht hat.
