--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_es.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=Arrastre un archivo LAR aquí para importarlo
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Ya existe una estructura de mapeo de datos dinámicos con clave {0}.
 enabled-on-private-pages=Habilitado en páginas privadas.
 enabled-on-public-pages=Habilitado en páginas públicas
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Plantilla de importación/exportación (Automatic Translation)
 export-import-portlet-permissions-help=Si esto es seleccionado, los permisos dados a la ventana del portlet exportado serán incluidos.
 export-import-theme-settings-help=Cuando sean seleccionados en la exportación, el tema y el esquema de colores escogidos para el sitio serán incluidos en los archivos LAR resultantes. Cuando sean seleccionados en la importación, las configuraciones del tema y esquema de colores serán importados y todas las páginas serán configuradas para utilizarlos.
 export-individual-deletions=Eliminaciones individuales de exportación (Automatic Translation)
@@ -86,6 +88,7 @@ new-publish-template=Nueva plantilla de publicación
 no-export-processes-were-found=No se ha encontrado ningún proceso de exportación.
 no-import-processes-were-found=No se ha encontrado ningún proceso de importación.
 no-pages=Mis páginas
+no-processes-were-found=Los procesos no fueron encontrados. (Automatic Translation)
 no-publication-processes-were-found=No se ha encontrado ningún proceso de publicación.
 no-scheduled-publication-processes-were-found=No se ha encontrado ningún proceso de publicación programado.
 none-empty-site-pages-variation=Ninguno (Variantes de páginas del sitio vacía)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=Esta versión se publ
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=No se puede activar la representación a distancia en el lugar con ID {0}. El sitio global solo puede ser representado en otro sitio global.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=No se pudo activar staging remoto en el sitio con identificador {0}. El sitio live remoto ha de ser diferente del sitio de staging.
 unable-to-execute-process-x=No es posible ejecutar el proceso ({0}).
-untitled=Sin título
 untitled-scheduled-publication=Publicación programada sin título
 update-data=Modificar los datos
 update-page-variation=Modificar las variantes de página
@@ -169,7 +171,21 @@ update-site-pages-variation=Modificar la variante de páginas del sitio
 view-page-staging-options=Visualizar opciones de Staging de la página
 view-source=Ver fuente
 x,-created-x-ago={0}, creado hace {1}.
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} tiene staging.
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=En este momento, está revisando esta página. Puede realizar cambios e iniciar el siguiente paso del workflow cuando estén listos.
 you-can-also-forcibly-disable-remote-staging=También puedes <a href="{0}">desactivar a la fuerza</a> staging remoto
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=No puede enviar sus cambios porque alguien más ya ha enviado cambios para ser aprobados.
