--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_fr.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=Déposer un fichier LAR pour import
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Une structure de correspondance de données dynamique avec la clé {0} existe déjà.
 enabled-on-private-pages=Activé sur les pages privées
 enabled-on-public-pages=Activé sur les pages publiques.
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Exportation/importation du modèle (Automatic Translation)
 export-import-portlet-permissions-help=Si coché, les permissions associée à la portlet exportée sont incluses.
 export-import-theme-settings-help=Quand sélectionné pour export, le thème et le modèle de couleurs for le site sont inclus dans les fichiers LAR final. Quand sélectionné pour import, les paramètres du thème et du modèle de couleur sont importés et toutes les pages sont configurées pour les utiliser.
 export-individual-deletions=Exportation des suppressions individuelles (Automatic Translation)
@@ -86,6 +88,7 @@ new-publish-template=Nouveau gabarit de publication
 no-export-processes-were-found=Aucune processus d'export n'a été trouvé.
 no-import-processes-were-found=Aucune processus d'import n'a été trouvé.
 no-pages=Mes pages
+no-processes-were-found=Aucun processus ne trouvées. (Automatic Translation)
 no-publication-processes-were-found=Aucun processus de publication n'a été trouvé.
 no-scheduled-publication-processes-were-found=Aucun processus de publication planifié n'a été trouvé.
 none-empty-site-pages-variation=Aucune (Variante de pages de site vide)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=Cette version sera pu
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Impossible d'activer le remote staging sur le site avec ID {0}. Le site Global peut seulement être le staging d'un autre site Global.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Impossible d'activer la mise en scène à distance sur le site avec l'ID {0}. Le site distant en direct doit être différent du site de la scène.
 unable-to-execute-process-x=Impossible d'exécuter le processus ({0}).
-untitled=Sans-titre
 untitled-scheduled-publication=Publication programmée sans titre
 update-data=Mettre à jour la donnée
 update-page-variation=Mettre à jour les variantes de page
@@ -169,7 +171,21 @@ update-site-pages-variation=Mettre à jour les variantes des pages de site
 view-page-staging-options=Voir options de staging de page
 view-source=Visualiser la source
 x,-created-x-ago={0}, créé il y a {1}.
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} est en test.
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=Vous êtes en cours de révision de cette page. Vous pouvez effectuer des changements et les envoyer à la prochaine étape dans le workflow lorsque vous serez prêt.
 you-can-also-forcibly-disable-remote-staging=Vous pouvez aussi <a href="{0}">forcer la désactivation de</a> remote staging.
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=Vous ne pouvez soumettre vos modifications car quelqu'un d'autre a déjà soumis des modifications pour approbation.
