--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_gl.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=Drop a LAR File to Import (Automatic Copy)
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Dynamic data mapping structure with structure key {0} already exists. (Automatic Copy)
 enabled-on-private-pages=Enabled on Private Pages (Automatic Copy)
 enabled-on-public-pages=Enabled on Public Pages (Automatic Copy)
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Export/Import Template (Automatic Copy)
 export-import-portlet-permissions-help=If this is checked, the permissions assigned for the exported portlet window are included. (Automatic Copy)
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
 export-individual-deletions=Export Individual Deletions (Automatic Copy)
@@ -86,6 +88,7 @@ new-publish-template=New Publish Template (Automatic Copy)
 no-export-processes-were-found=No export processes were found. (Automatic Copy)
 no-import-processes-were-found=No import processes were found. (Automatic Copy)
 no-pages=As miñas páxinas
+no-processes-were-found=No processes were found. (Automatic Copy)
 no-publication-processes-were-found=No publication processes were found. (Automatic Copy)
 no-scheduled-publication-processes-were-found=No scheduled publication processes were found. (Automatic Copy)
 none-empty-site-pages-variation=None (Empty Site Pages Variation) (Automatic Copy)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=Esta versión será p
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Unable to activate remote staging on site with ID {0}. Global site can only be staged to another global site. (Automatic Copy)
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Unable to activate remote staging on site with ID {0}. The remote live site must be different from the stage site. (Automatic Copy)
 unable-to-execute-process-x=Unable to execute process ({0}). (Automatic Copy)
-untitled=Untitled (Automatic Copy)
 untitled-scheduled-publication=Untitled Scheduled Publication (Automatic Copy)
 update-data=Update Data (Automatic Copy)
 update-page-variation=Actualizar variación de páxina
@@ -169,7 +171,21 @@ update-site-pages-variation=Actualizar variación de páxina
 view-page-staging-options=View Page Staging Options (Automatic Copy)
 view-source=View Source (Automatic Copy)
 x,-created-x-ago={0}, created {1} ago. (Automatic Copy)
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} está en fases.
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=You are currently reviewing this page. You can make changes and send them to the next step in the workflow when ready. (Automatic Copy)
 you-can-also-forcibly-disable-remote-staging=You can also <a href="{0}">forcibly disable</a> remote staging. (Automatic Copy)
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=You cannot submit your changes because someone else has already submitted changes for approval. (Automatic Copy)
