--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_hi_IN.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=एक LAR फ़ाइल आयात करन
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Dynamic data mapping structure with structure key {0} already exists. (Automatic Copy)
 enabled-on-private-pages=निजी पन्नों पर सक्षम किया गया (Automatic Translation)
 enabled-on-public-pages=जनता के पन्नों पर सक्षम किया गया (Automatic Translation)
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=आयात/निर्यात टेम्पलेट (Automatic Translation)
 export-import-portlet-permissions-help=यदि यह चेक, निर्यातित portlet खिड़की के लिए असाइन किया गया अनुमतियाँ शामिल हैं। (Automatic Translation)
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
 export-individual-deletions=अलग-अलग विलोपन निर्यात (Automatic Translation)
@@ -86,6 +88,7 @@ new-publish-template=नया टेम्पलेट प्रकाशित
 no-export-processes-were-found=कोई निर्यात प्रक्रियाएँ नहीं मिले। (Automatic Translation)
 no-import-processes-were-found=कोई आयात प्रक्रियाओं पाए गए। (Automatic Translation)
 no-pages=मेरे पेज
+no-processes-were-found=कोई प्रक्रिया नहीं मिले। (Automatic Translation)
 no-publication-processes-were-found=कोई प्रकाशन प्रक्रियाओं पाए गए। (Automatic Translation)
 no-scheduled-publication-processes-were-found=कोई शेड्यूल किए गए प्रकाशन प्रक्रियाओं नहीं मिले। (Automatic Translation)
 none-empty-site-pages-variation=कोई नहीं (रिक्त साइट भिन्नता पेज) (Automatic Translation)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=This version will be 
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Unable to activate remote staging on site with ID {0}. Global site can only be staged to another global site. (Automatic Copy)
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Unable to activate remote staging on site with ID {0}. The remote live site must be different from the stage site. (Automatic Copy)
 unable-to-execute-process-x=Unable to execute process ({0}). (Automatic Copy)
-untitled=शीर्षकहीन (Automatic Translation)
 untitled-scheduled-publication=अनामांकित शेड्यूल किए गए प्रकाशन (Automatic Translation)
 update-data=डेटा अद्यतन करें (Automatic Translation)
 update-page-variation=Add Page Variation
@@ -169,7 +171,21 @@ update-site-pages-variation=Site Pages Variation
 view-page-staging-options=मचान विकल्प दृश्य पृष्ठ (Automatic Translation)
 view-source=स्रोत देखें (Automatic Translation)
 x,-created-x-ago={0}, created {1} ago. (Automatic Copy)
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} is staged. (Automatic Copy)
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=आप वर्तमान में इस पृष्ठ की समीक्षा कर रहे हैं। आप परिवर्तन कर और उन्हें जब तैयार वर्कफ़्लो में अगले कदम के लिए भेज सकते हैं। (Automatic Translation)
 you-can-also-forcibly-disable-remote-staging=You can also <a href="{0}">forcibly disable</a> remote staging. (Automatic Copy)
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=क्योंकि किसी और पहले से ही परिवर्तन के अनुमोदन के लिए प्रस्तुत है आप अपने परिवर्तन सबमिट नहीं कर सकते हैं। (Automatic Translation)
