--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_hu.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=Húzz ide egy importálandó LAR fájlt.
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=A Dinamikus adat mapping struktúra a {0} struktúra kulccsal már létezik.
 enabled-on-private-pages=Privát oldalakon engedélyezve
 enabled-on-public-pages=Nyilvános oldalakon engedélyezve
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Adatexportálási /-importálási sablon (Automatic Translation)
 export-import-portlet-permissions-help=Ha ez be van jelölve, az exportált portlet ablakhoz tartozó jogosultságok is bele lesznek foglalva.
 export-import-theme-settings-help=Exportnál kiválasztva, a webhelyhez választott téma és színséma benne lesz a létrejövő LAR fájlban. Importnál kiválasztva a téma és színséma beállítások importálva lesznek és az összes oldal be lesz arra állítva, hogy használja őket.
 export-individual-deletions=Export egyéni törlések (Automatic Translation)
@@ -86,6 +88,7 @@ new-publish-template=Új publikálási sablon
 no-export-processes-were-found=Nem található export folyamat.
 no-import-processes-were-found=Nem található import folyamat.
 no-pages=Saját oldalak
+no-processes-were-found=Nincs folyamatok találtak. (Automatic Translation)
 no-publication-processes-were-found=Nem található közzétételi folyamat.
 no-scheduled-publication-processes-were-found=Nem található időzített közzétételi folyamat.
 none-empty-site-pages-variation=Nincs (Üres webhely-oldalváltozatok)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=Ez a változat akkor 
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Nem lehetséges aktiválni a távoli staginget a webhelyen ezzel az azonosítóval: {0}. A globális webhely csak másik globális helyre stage-elhető.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Nem lehet aktiválni a távoli staginget a(z) {0} azonosítójú webhelyen. A távoli élő webhely nem lehet ugyanaz, mint a stage webhely.
 unable-to-execute-process-x=Nem lehet a folyamatot végrehajtani ({0}).
-untitled=Cím nélküli
 untitled-scheduled-publication=Cím nélküli ütemezett publikáció
 update-data=Adat frissítése
 update-page-variation=Oldalváltozat frissítése
@@ -169,7 +171,21 @@ update-site-pages-variation=Webhely oldalváltozatainak frissítése
 view-page-staging-options=Oldal stagingelési opciók megtekintése
 view-source=Forrás megtekintése
 x,-created-x-ago={0}, létrehozva ennyi ideje: {1}.
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} a többlépcsős munkafolyamat része.
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=Jelenleg felülvizsgálod ezt az oldalt. Létrehozhatsz változtatásokat, és elküldheted őket a következő lépésre a munkafolyamatban, amikor kész vagy.
 you-can-also-forcibly-disable-remote-staging=<a href="{0}">Erőszakkal letiltás</a>-t is alkalmazhatsz a távoli stagingre.
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=Nem tudod elküldeni a változtatásaidat, mert valaki más már küldött jóváhagyandó változtatásokat.
