--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_nb.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=Slipp en LAR-fil her for import
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Dynamisk data liste struktur med nøkkel {0} finnes allerede.
 enabled-on-private-pages=Aktivert på Private sider (Automatic Translation)
 enabled-on-public-pages=Aktivert på offentlige sider (Automatic Translation)
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Malen for eksport/Import (Automatic Translation)
 export-import-portlet-permissions-help=Hvis dette er valgt, inkluderes tillatelser som er tildelt for vinduet eksporterte portleten. (Automatic Translation)
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
 export-individual-deletions=Eksportere personlige slettinger (Automatic Translation)
@@ -86,6 +88,7 @@ new-publish-template=Ny publiseringsmal
 no-export-processes-were-found=Ingen eksportprosesser ble funnet.
 no-import-processes-were-found=Ingen importprosesser ble funnet.
 no-pages=Mine sider
+no-processes-were-found=Ingen prosesser ble funnet. (Automatic Translation)
 no-publication-processes-were-found=Ingen publiseringsprosess ble funnet.
 no-scheduled-publication-processes-were-found=Ingen publiseringsprosess ble funnet.
 none-empty-site-pages-variation=Ingen (Tom nettstedssidevariant)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=Denne versjonen blir 
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Kan ikke aktivere fjerntjener publisering på nettstedet med ID {0}. Globale nettsteder kan bare publiseres til andre globale nettsteder.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Unable to activate remote staging on site with ID {0}. The remote live site must be different from the stage site. (Automatic Copy)
 unable-to-execute-process-x=Kan ikke kjøre prosessen ({0}).
-untitled=Uten navn (Automatic Translation)
 untitled-scheduled-publication=Untitled planlagte publikasjon (Automatic Translation)
 update-data=Oppdater data
 update-page-variation=Oppdater sidevariant
@@ -169,7 +171,21 @@ update-site-pages-variation=Oppdater nettstedssidevarianter
 view-page-staging-options=Visningssiden Staging alternativer (Automatic Translation)
 view-source=Vis kilde (Automatic Translation)
 x,-created-x-ago={0}, created {1} ago. (Automatic Copy)
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} er i test.
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=Du gjennomgår denne siden. Du kan gjøre endringer og sende dem til neste steg i arbeidsflyten når du er ferdig.
 you-can-also-forcibly-disable-remote-staging=You can also <a href="{0}">forcibly disable</a> remote staging. (Automatic Copy)
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=Du kan ikke sende inn dine endringer fordi noen andre har allerede sendt inn endringer til godkjennelse.
