--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_nl.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=LAR-bestand hier neerzetten om te importeren
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Er bestaat al een dynamische-datamappingstructuur met sleutel {0}.
 enabled-on-private-pages=Geactiveerd op privé pagina's
 enabled-on-public-pages=Gactiveerd op publieke pagina's
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Export/Import Template (Automatic Copy)
 export-import-portlet-permissions-help=Als deze optie is geselecteerd zullen de rechten die zijn toegekend aan de het geëxporteerde portletscherm worden meegenomen.
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
 export-individual-deletions=Export Individual Deletions (Automatic Copy)
@@ -86,6 +88,7 @@ new-publish-template=Nieuw publicatiesjabloon
 no-export-processes-were-found=Er zijn geen exportprocessen gevonden.
 no-import-processes-were-found=Er zijn geen importprocessen gevonden.
 no-pages=Mijn pagina's
+no-processes-were-found=No processes were found. (Automatic Copy)
 no-publication-processes-were-found=Er zijn geen publicatieprocessen gevonden.
 no-scheduled-publication-processes-were-found=Er zijn geen geplande publicatieprocessen gevonden.
 none-empty-site-pages-variation=Geen (Lege sitepaginavariant)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=Deze versie wordt gep
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Het is niet mogelijk om extern gefaseerde publicatie te activeren op de site met ID {0}. Een globale site kan alleen gefaseerd gepubliceerd worden naar een andere globale site.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Fout bij het activeren van fasering op afstand op site met ID {0}. De site op afstand moet verschillend van de fasesite.
 unable-to-execute-process-x=Het is niet mogelijk om het proces uit te voeren ({0}).
-untitled=Naamloos
 untitled-scheduled-publication=Naamloze geplande publicatie
 update-data=Data bijwerken
 update-page-variation=Paginavariant bijwerken
@@ -169,7 +171,21 @@ update-site-pages-variation=Sitepaginavariant bijwerken
 view-page-staging-options=Bekijk pagina ontwikkelopties
 view-source=Bron bekijken
 x,-created-x-ago={0}, {1} geleden aangemaakt.
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} is gefaseerd.
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=U bent deze pagina aan het beoordelen. U kunt wijzigingen aanbrengen en deze naar de volgende stap in de werkstroom zenden als u klaar bent.
 you-can-also-forcibly-disable-remote-staging=U kunt externe gefaseerde publicatie ook <a href="{0}">geforceerd uitschakelen</a>.
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=U kunt uw wijzigingen niet verzenden omdat iemand anders al wijzigingen ter goedkeuring heeft verzonden.
