--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_zh_CN.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=导入LAR文件
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=结构key为{0}的动态数据映射结构已经存在。
 enabled-on-private-pages=在个人页面上启用
 enabled-on-public-pages=在公共页面上启用
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=导出/导入模板 (Automatic Translation)
 export-import-portlet-permissions-help=如果选中此项，分配给导出Portlet窗口的权限也包括在内。
 export-import-theme-settings-help=当选择导出时，为该站点选择的主题和配色方案包含在生成的LAR文件中。当选择导入时，主题和配色方案设置导入并且配置到所有页面。
 export-individual-deletions=导出单个删除 (Automatic Translation)
@@ -86,6 +88,7 @@ new-publish-template=新发布的模板
 no-export-processes-were-found=没有找到导出处理。
 no-import-processes-were-found=没有找到导入处理。
 no-pages=没有页面
+no-processes-were-found=没有进程被发现。 (Automatic Translation)
 no-publication-processes-were-found=没有找到发布处理。
 no-scheduled-publication-processes-were-found=没有找到预定的发布处理。
 none-empty-site-pages-variation=无(空白站点页面分支)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=当<em>{0}</em>被发
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=在站点ID{0}不能激活远程staging。全球站点只能被另一个全球站点stage。
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=无法使用账号{0}现场激活远程Staging。远程Live网站必须与Stage网站不同。
 unable-to-execute-process-x=无法执行过程。({0})
-untitled=无标题
 untitled-scheduled-publication=无标题的日程发布
 update-data=更新数据
 update-page-variation=更新页面分支
@@ -169,7 +171,21 @@ update-site-pages-variation=更新站点页面分支
 view-page-staging-options=查看页面Staging选项
 view-source=查看来源
 x,-created-x-ago={0}, 创建 {1} 之前。
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0}待发布。
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=当前您正在审核这一页面。您可以做出改动并在准备好的状态下将其发送至工作流中的下一阶段。
 you-can-also-forcibly-disable-remote-staging=您也可以 <a href="{0}">强制禁用</a>远程staging
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=您无法提交您所做的更改，因为其他人已经提交修改等待审核了。
