--- a/portal-impl/src/content/Language_ar.properties
+++ b/portal-impl/src/content/Language_ar.properties
@@ -5161,6 +5161,7 @@ unread-messages=عكس قراءة الرسائل
 unscramble=غير مبعثر
 unsubscribe=إلغاء الإشتراك
 unsubscribe-from-comments=إلغاء الاشتراك في التعليقات
+untitled=بدون عنوان (Automatic Translation)
 untrusted=غير موثوق
 untrusted-plugin-repositories=مستودعات مكونات إضافية غير موثوقة
 up=أعلى
