--- a/portal-impl/src/content/Language_bg.properties
+++ b/portal-impl/src/content/Language_bg.properties
@@ -5161,6 +5161,7 @@ unread-messages=Непрочетени съобщения
 unscramble=Разшифровам
 unsubscribe=Разабониране
 unsubscribe-from-comments=Unsubscribe from Comments (Automatic Copy)
+untitled=Без име (Automatic Translation)
 untrusted=Недоверен
 untrusted-plugin-repositories=Недоверени хранилища за плъгини
 up=Горе
