--- a/portal-impl/src/content/Language_ca.properties
+++ b/portal-impl/src/content/Language_ca.properties
@@ -5164,6 +5164,7 @@ unread-messages=Missatges no llegits
 unscramble=Desxifra
 unsubscribe=Dóna'm de baixa
 unsubscribe-from-comments=Dóna'm de baixa dels comentaris
+untitled=Sense títol (Automatic Translation)
 untrusted=No fiable
 untrusted-plugin-repositories=Repositoris de connectors no fiables
 up=Dalt
