--- a/portal-impl/src/content/Language_da.properties
+++ b/portal-impl/src/content/Language_da.properties
@@ -5161,6 +5161,7 @@ unread-messages=Unread Messages (Automatic Copy)
 unscramble=Unscramble (Automatic Copy)
 unsubscribe=Unsubscribe (Automatic Copy)
 unsubscribe-from-comments=Abonner på kommentarer
+untitled=Untitled (Automatic Copy)
 untrusted=Ubetroet
 untrusted-plugin-repositories=Betroede udvidelseskilder
 up=Op
