--- a/portal-impl/src/content/Language_de.properties
+++ b/portal-impl/src/content/Language_de.properties
@@ -5164,6 +5164,7 @@ unread-messages=Ungelesene Nachrichten
 unscramble=Dechiffrieren
 unsubscribe=Abbestellen
 unsubscribe-from-comments=Kommentare abbestellen
+untitled=Untitled (Automatic Copy)
 untrusted=Nicht vertrauenswürdig
 untrusted-plugin-repositories=Nicht vertrauenswürdige Plugin-Repositorys
 up=Hoch
