--- a/portal-impl/src/content/Language_el.properties
+++ b/portal-impl/src/content/Language_el.properties
@@ -5161,6 +5161,7 @@ unread-messages=Αδιάβαστα μηνύματα
 unscramble=Αποκρυπτογράφηση
 unsubscribe=Διαγραφή συνδρομής
 unsubscribe-from-comments=Διαγραφή συνδρομής από τα σχόλια
+untitled=Χωρίς τίτλο (Automatic Translation)
 untrusted=Μη έμπιστο
 untrusted-plugin-repositories=Χώροι αποθήκευσης μη έμπιστων plugins
 up=Επάνω
