--- a/portal-impl/src/content/Language_en.properties
+++ b/portal-impl/src/content/Language_en.properties
@@ -5165,6 +5165,7 @@ unread-messages=Unread Messages
 unscramble=Unscramble
 unsubscribe=Unsubscribe
 unsubscribe-from-comments=Unsubscribe from Comments
+untitled=Untitled
 untrusted=Untrusted
 untrusted-plugin-repositories=Untrusted Plugin Repositories
 up=Up
