--- a/portal-impl/src/content/Language_es.properties
+++ b/portal-impl/src/content/Language_es.properties
@@ -5164,6 +5164,7 @@ unread-messages=Mensajes no leídos
 unscramble=Descifrar
 unsubscribe=Darse de baja
 unsubscribe-from-comments=Darse de baja de los comentarios
+untitled=Sin título (Automatic Translation)
 untrusted=No fiables
 untrusted-plugin-repositories=Repositorios de plugins no fiables
 up=Arriba
