--- a/portal-impl/src/content/Language_et.properties
+++ b/portal-impl/src/content/Language_et.properties
@@ -5161,6 +5161,7 @@ unread-messages=Lugemata sõnumid
 unscramble=Unscramble (Automatic Copy)
 unsubscribe=Lahku
 unsubscribe-from-comments=Unsubscribe from Comments (Automatic Copy)
+untitled=Untitled (Automatic Translation)
 untrusted=Mitteusaldatav
 untrusted-plugin-repositories=Mitteusaldatavad plugin'i hoidlad
 up=Üles
