--- a/portal-impl/src/content/Language_eu.properties
+++ b/portal-impl/src/content/Language_eu.properties
@@ -5161,6 +5161,7 @@ unread-messages=Irakurri gabeko mezuak
 unscramble=Argitu
 unsubscribe=Utzi harpidetza
 unsubscribe-from-comments=Utzi iruzkinen harpidetza
+untitled=Untitled (Automatic Copy)
 untrusted=Ez fidagarriak
 untrusted-plugin-repositories=Plugin ez fidagarrien biltegiak
 up=Goian
