--- a/portal-impl/src/content/Language_fa.properties
+++ b/portal-impl/src/content/Language_fa.properties
@@ -5161,6 +5161,7 @@ unread-messages=پیغام خوانده نشده
 unscramble=Unscramble (Automatic Copy)
 unsubscribe=قطع عضویت
 unsubscribe-from-comments=لغو اشتراک از خبرنامه نظرات
+untitled=بدون عنوان (Automatic Translation)
 untrusted=غیرقابل اطمینان
 untrusted-plugin-repositories=مخازن پلاگین غیر قابل اعتماد
 up=بالا
