--- a/portal-impl/src/content/Language_fi.properties
+++ b/portal-impl/src/content/Language_fi.properties
@@ -5159,6 +5159,7 @@ unread-messages=Lukemattomat viestit
 unscramble=Selvitä
 unsubscribe=Peru tilaus
 unsubscribe-from-comments=Peruuta kommenttien tilaus
+untitled=Untitled (Automatic Copy)
 untrusted=Epäluotettava
 untrusted-plugin-repositories=Epäluotettavat plugin varastot
 up=Ylös
