--- a/portal-impl/src/content/Language_fr.properties
+++ b/portal-impl/src/content/Language_fr.properties
@@ -5164,6 +5164,7 @@ unread-messages=Messages non lus
 unscramble=Déchiffreur de mots
 unsubscribe=Se désinscrire
 unsubscribe-from-comments=Se désabonner des commentaires
+untitled=Sans titre (Automatic Translation)
 untrusted=A éviter
 untrusted-plugin-repositories=Dépôts de plugins à éviter
 up=Haut
