--- a/portal-impl/src/content/Language_gl.properties
+++ b/portal-impl/src/content/Language_gl.properties
@@ -5161,6 +5161,7 @@ unread-messages=Mensaxes non lidas
 unscramble=Descifrar
 unsubscribe=Desuscribirse
 unsubscribe-from-comments=Anular subscrición aos comentarios
+untitled=Untitled (Automatic Copy)
 untrusted=Non fiables
 untrusted-plugin-repositories=Repositorios de plugins non fiables
 up=Arriba
