--- a/portal-impl/src/content/Language_hi_IN.properties
+++ b/portal-impl/src/content/Language_hi_IN.properties
@@ -5161,6 +5161,7 @@ unread-messages=अपठित मेसेजस
 unscramble=खोलना (Automatic Translation)
 unsubscribe=सदस्यता रद्द करें
 unsubscribe-from-comments=टिप्पणी से सदस्यता समाप्त (Automatic Translation)
+untitled=अनामांकित (Automatic Translation)
 untrusted=अविश्वस्त
 untrusted-plugin-repositories=अनट्रसटेड Plugin Repositories
 up=ऊपर (Automatic Translation)
