--- a/portal-impl/src/content/Language_hr.properties
+++ b/portal-impl/src/content/Language_hr.properties
@@ -5161,6 +5161,7 @@ unread-messages=Nepročitane poruke
 unscramble=Dešifriraj
 unsubscribe=Ukini pretplatu
 unsubscribe-from-comments=Odjava iz Komentari
+untitled=Untitled (Automatic Copy)
 untrusted=Neprovjereno
 untrusted-plugin-repositories=Neprovjereni spremnici dodataka
 up=Gore
