--- a/portal-impl/src/content/Language_hu.properties
+++ b/portal-impl/src/content/Language_hu.properties
@@ -5164,6 +5164,7 @@ unread-messages=Olvasatlan üzenetek
 unscramble=Visszakódolás
 unsubscribe=Leiratkozás
 unsubscribe-from-comments=Leiratkozás a hozzászólásokról
+untitled=Untitled (Automatic Translation)
 untrusted=Nem megbízható
 untrusted-plugin-repositories=Nem megbízható plugin adattárak
 up=Fel
