--- a/portal-impl/src/content/Language_in.properties
+++ b/portal-impl/src/content/Language_in.properties
@@ -5161,6 +5161,7 @@ unread-messages=Pesan belum dibaca
 unscramble=Menguraikan
 unsubscribe=Berhenti berlangganan
 unsubscribe-from-comments=Berhenti berlangganan dari Komentar
+untitled=Untitled (Automatic Translation)
 untrusted=Tidak dipercaya
 untrusted-plugin-repositories=Plugin Repositori terpercaya
 up=Ke atas
