--- a/portal-impl/src/content/Language_it.properties
+++ b/portal-impl/src/content/Language_it.properties
@@ -5164,6 +5164,7 @@ unread-messages=Messaggi Non Letti
 unscramble=Riordina
 unsubscribe=Annulla l'iscrizione
 unsubscribe-from-comments=Disdire dai Commenti
+untitled=Senza titolo (Automatic Translation)
 untrusted=Non certificati
 untrusted-plugin-repositories=Repositories dei Plugin non certificati
 up=Su
