--- a/portal-impl/src/content/Language_iw.properties
+++ b/portal-impl/src/content/Language_iw.properties
@@ -5161,6 +5161,7 @@ unread-messages=הודעות שלא נקראו
 unscramble=פענח
 unsubscribe=בטל הרשמה
 unsubscribe-from-comments=בטל רישום לתגובות
+untitled=ללא כותרת (Automatic Translation)
 untrusted=לא אמין
 untrusted-plugin-repositories=מחסני תוכנות תקע שאינן אמינות
 up=למעלה
