--- a/portal-impl/src/content/Language_ja.properties
+++ b/portal-impl/src/content/Language_ja.properties
@@ -5163,6 +5163,7 @@ unread-messages=未読メール
 unscramble=組み立て
 unsubscribe=メール通知の解除
 unsubscribe-from-comments=コメント変更通知受け取り（購読）の解除
+untitled=Untitled (Automatic Copy)
 untrusted=信頼性なし
 untrusted-plugin-repositories=信頼性のないプラグインレポジトリ
 up=上へ
