--- a/portal-impl/src/content/Language_ko.properties
+++ b/portal-impl/src/content/Language_ko.properties
@@ -5160,6 +5160,7 @@ unread-messages=무식한 메시지
 unscramble=사람만 (Automatic Translation)
 unsubscribe=구독 취소 (Automatic Translation)
 unsubscribe-from-comments=코멘트에서 탈퇴 (Automatic Translation)
+untitled=제목 (Automatic Translation)
 untrusted=신뢰할 수 없는 (Automatic Translation)
 untrusted-plugin-repositories=Untrusted플러그 접속식 창고
 up=높은 쪽으로
