--- a/portal-impl/src/content/Language_lo.properties
+++ b/portal-impl/src/content/Language_lo.properties
@@ -5161,6 +5161,7 @@ unread-messages=ບໍ່ອ່ານຂໍ້ຄວາມ
 unscramble=ຖອດລະຫັດ
 unsubscribe=ຍົກເລີກການຮັບສະໝັກ
 unsubscribe-from-comments=ບໍ່ຮັບຄຳເຫັນຕ່າງໆ
+untitled=Untitled (Automatic Copy)
 untrusted=ບໍ່ໜ້າເຊື່ອຖື
 untrusted-plugin-repositories=ຄັງປັ໋ກອີນບໍ່ໜ້າເຊື່ອຖື
 up=ຂ້າງເທິງ
