--- a/portal-impl/src/content/Language_lt.properties
+++ b/portal-impl/src/content/Language_lt.properties
@@ -5161,6 +5161,7 @@ unread-messages=Unread Messages (Automatic Copy)
 unscramble=Unscramble (Automatic Copy)
 unsubscribe=Unsubscribe (Automatic Copy)
 unsubscribe-from-comments=Unsubscribe from Comments (Automatic Copy)
+untitled=Be pavadinimo (Automatic Translation)
 untrusted=Untrusted (Automatic Copy)
 untrusted-plugin-repositories=Untrusted Plugin Repositories (Automatic Copy)
 up=Up (Automatic Copy)
