--- a/portal-impl/src/content/Language_nb.properties
+++ b/portal-impl/src/content/Language_nb.properties
@@ -5161,6 +5161,7 @@ unread-messages=Uleste beskjeder
 unscramble=Avdekke
 unsubscribe=Avslutt abonnement
 unsubscribe-from-comments=Avslutt abonnement på kommentarer
+untitled=Uten navn (Automatic Translation)
 untrusted=Usikker
 untrusted-plugin-repositories=Usikre kataloger for tillegg
 up=Opp
