--- a/portal-impl/src/content/Language_nl.properties
+++ b/portal-impl/src/content/Language_nl.properties
@@ -5165,6 +5165,7 @@ unread-messages=Ongelezen berichten
 unscramble=Versleutelen ongedaan maken
 unsubscribe=Afmelden
 unsubscribe-from-comments=Afmelden van reacties
+untitled=Untitled (Automatic Copy)
 untrusted=Onbetrouwbaar
 untrusted-plugin-repositories=Bewaarplaatsen voor onbetrouwbare plug-ins
 up=Op
