--- a/portal-impl/src/content/Language_nl_BE.properties
+++ b/portal-impl/src/content/Language_nl_BE.properties
@@ -5165,6 +5165,7 @@ unread-messages=Ongelezen berichten
 unscramble=Decoderen
 unsubscribe=Opzeggen
 unsubscribe-from-comments=Uitschrijven voor opmerkingen
+untitled=Untitled (Automatic Copy)
 untrusted=Niet-vertrouwd
 untrusted-plugin-repositories=Niet-vertrouwde plugin repository
 up=Op
