--- a/portal-impl/src/content/Language_pl.properties
+++ b/portal-impl/src/content/Language_pl.properties
@@ -5161,6 +5161,7 @@ unread-messages=Wiadomości nieprzeczytane
 unscramble=Rozszyfruj
 unsubscribe=Rezygnuj z subskrypcji
 unsubscribe-from-comments=Rezygnuj z subskrypcji komentarzy
+untitled=Bez tytułu (Automatic Translation)
 untrusted=Niegodne zaufania
 untrusted-plugin-repositories=Repozytoria wtyczek niegodne zaufania
 up=W górę
