--- a/portal-impl/src/content/Language_pt_BR.properties
+++ b/portal-impl/src/content/Language_pt_BR.properties
@@ -5161,6 +5161,7 @@ unread-messages=Mensagens não lidas
 unscramble=Decifrar
 unsubscribe=Remover subscrição
 unsubscribe-from-comments=Retirar subscrição dos comentários
+untitled=Sem título (Automatic Translation)
 untrusted=Não confiável
 untrusted-plugin-repositories=Repositórios de plugins não confiáveis
 up=Acima
