--- a/portal-impl/src/content/Language_pt_PT.properties
+++ b/portal-impl/src/content/Language_pt_PT.properties
@@ -5164,6 +5164,7 @@ unread-messages=Mensagens não Lidas
 unscramble=Decifrar
 unsubscribe=Remover Subscrição
 unsubscribe-from-comments=Remover Subscrição dos Comentários
+untitled=Sem título (Automatic Translation)
 untrusted=Não Confiável
 untrusted-plugin-repositories=Repositórios de Plugins não Confiáveis
 up=Acima
