--- a/portal-impl/src/content/Language_ro.properties
+++ b/portal-impl/src/content/Language_ro.properties
@@ -5161,6 +5161,7 @@ unread-messages=mesaje Necitite
 unscramble=Unscramble (Automatic Copy)
 unsubscribe=Dezaboneaza
 unsubscribe-from-comments=Dezaboneaza de la Comentarii
+untitled=Fără titlu (Automatic Translation)
 untrusted=Neacreditat
 untrusted-plugin-repositories=Pepertoriu de Plugin-uri Neacreditat
 up=Sus
