--- a/portal-impl/src/content/Language_ru.properties
+++ b/portal-impl/src/content/Language_ru.properties
@@ -5161,6 +5161,7 @@ unread-messages=Непрочитанные сообщения
 unscramble=Расшифровать
 unsubscribe=Отписаться
 unsubscribe-from-comments=Отписаться от комментариев
+untitled=Без названия (Automatic Translation)
 untrusted=Недоверенный
 untrusted-plugin-repositories=Недоверенные репозитарии плагинов
 up=Вверх
