--- a/portal-impl/src/content/Language_sk.properties
+++ b/portal-impl/src/content/Language_sk.properties
@@ -5161,6 +5161,7 @@ unread-messages=Neprečítané správy
 unscramble=Usporiadať
 unsubscribe=Zrušiť odoberanie
 unsubscribe-from-comments=Odhlásiť sa z odberu komentárov
+untitled=Bez názvu (Automatic Translation)
 untrusted=Nedôveryhodný
 untrusted-plugin-repositories=Nedôveryhodné repozitáre zásuvných modulov
 up=Hore
