--- a/portal-impl/src/content/Language_sl.properties
+++ b/portal-impl/src/content/Language_sl.properties
@@ -5161,6 +5161,7 @@ unread-messages=Neprebrana sporočila.
 unscramble=Prikaži nezmešano.
 unsubscribe=Odjavi.
 unsubscribe-from-comments=Unsubscribe from Comments (Automatic Copy)
+untitled=Brez naslova (Automatic Translation)
 untrusted=Nevreden zaupanja.
 untrusted-plugin-repositories=Zaupanja nevredna skladišča vtičnikov.
 up=Gor
