--- a/portal-impl/src/content/Language_sr_RS.properties
+++ b/portal-impl/src/content/Language_sr_RS.properties
@@ -5161,6 +5161,7 @@ unread-messages=Непрочитане Поруке
 unscramble=Размрси
 unsubscribe=Одјави се
 unsubscribe-from-comments=Размрси од Коментара
+untitled=Untitled (Automatic Copy)
 untrusted=Непоуздан
 untrusted-plugin-repositories=Непроверени Додатак Спремишта
 up=Изнад
