--- a/portal-impl/src/content/Language_sv.properties
+++ b/portal-impl/src/content/Language_sv.properties
@@ -5161,6 +5161,7 @@ unread-messages=Olästa meddelande
 unscramble=Blanda inte
 unsubscribe=Avsluta prenumeration
 unsubscribe-from-comments=Prenumerera på kommentarer
+untitled=Untitled (Automatic Copy)
 untrusted=Osäker
 untrusted-plugin-repositories=Osäkra tilläggskällor
 up=Upp
