--- a/portal-impl/src/content/Language_tr.properties
+++ b/portal-impl/src/content/Language_tr.properties
@@ -5161,6 +5161,7 @@ unread-messages=Okunmamış İletiler
 unscramble=Deşifre et
 unsubscribe=Aboneliği iptal et.
 unsubscribe-from-comments=Unsubscribe from Comments (Automatic Copy)
+untitled=Adsız (Automatic Translation)
 untrusted=üvenilir olmayan
 untrusted-plugin-repositories=Güvenilir Olmayan Eklenti Kaynakları
 up=Yukarı
