--- a/portal-impl/src/content/Language_uk.properties
+++ b/portal-impl/src/content/Language_uk.properties
@@ -5161,6 +5161,7 @@ unread-messages=Непрочитані повідомлення
 unscramble=Розплуитати
 unsubscribe=Відписатися
 unsubscribe-from-comments=Unsubscribe from Comments (Automatic Copy)
+untitled=Без назви (Automatic Translation)
 untrusted=Недовірений
 untrusted-plugin-repositories=Недовірені репозитарії плагинів
 up=Вверх
