--- a/portal-impl/src/content/Language_vi.properties
+++ b/portal-impl/src/content/Language_vi.properties
@@ -5161,6 +5161,7 @@ unread-messages=Các tin nhắn chưa đọc
 unscramble=Hủy trộn
 unsubscribe=Hủy đăng ký theo dõi
 unsubscribe-from-comments=Hủy đăng ký theo dõi từ bình luận
+untitled=Chưa có tiêu đề (Automatic Translation)
 untrusted=Không đảm bảo
 untrusted-plugin-repositories=Kho chứa các bộ nhúng không tin cậy
 up=Lên trên
