--- a/portal-impl/src/content/Language_zh_CN.properties
+++ b/portal-impl/src/content/Language_zh_CN.properties
@@ -5163,6 +5163,7 @@ unread-messages=未读消息
 unscramble=破解
 unsubscribe=取消订阅
 unsubscribe-from-comments=取消评论订阅
+untitled=无题 (Automatic Translation)
 untrusted=非信任的
 untrusted-plugin-repositories=非信任的Plugin存储库
 up=上
