--- a/portal-impl/src/content/Language_zh_TW.properties
+++ b/portal-impl/src/content/Language_zh_TW.properties
@@ -5161,6 +5161,7 @@ unread-messages=未經閱讀的消息
 unscramble=破解
 unsubscribe=取消預訂
 unsubscribe-from-comments=取消預訂評論
+untitled=無題 (Automatic Translation)
 untrusted=未信任的
 untrusted-plugin-repositories=未信任的插件資源庫
 up=上
