--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_cs.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=Zadejte LAR soubor pro import
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Dynamic data mapping structure with structure key {0} already exists. (Automatic Copy)
 enabled-on-private-pages=Na soukromých stránkách povoleno (Automatic Translation)
 enabled-on-public-pages=Na veřejných stránkách povoleno (Automatic Translation)
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Export/Import šablony (Automatic Translation)
 export-import-portlet-permissions-help=Pokud je toto políčko zaškrtnuto, jsou zahrnuty oprávnění přiřazených pro okno vyvážených portletu. (Automatic Translation)
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
 export-individual-deletions=Exportovat jednotlivé odstranění (Automatic Translation)
@@ -86,6 +88,7 @@ new-publish-template=New Publish Template (Automatic Copy)
 no-export-processes-were-found=Nebyly nalezeny žádné procesy pro export.
 no-import-processes-were-found=Nebyly nalezeny žádné procesy pro import.
 no-pages=Moje stránky
+no-processes-were-found=Nebyly nalezeny žádné procesy. (Automatic Translation)
 no-publication-processes-were-found=Nebyly nalezeny žádné procesy pro publikaci.
 no-scheduled-publication-processes-were-found=Nebyly nalezeny žádné procesy pro publikaci.
 none-empty-site-pages-variation=Žádná (prázdná varianta privátních stránek)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=Tato verze bude publi
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Unable to activate remote staging on site with ID {0}. Global site can only be staged to another global site. (Automatic Copy)
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Unable to activate remote staging on site with ID {0}. The remote live site must be different from the stage site. (Automatic Copy)
 unable-to-execute-process-x=Nepodařilo se spustit proces ({0}).
-untitled=Bez názvu (Automatic Translation)
 untitled-scheduled-publication=Bez názvu publikačního (Automatic Translation)
 update-data=Aktualizovat data
 update-page-variation=Aktualizovat variantu stránky
@@ -169,7 +171,21 @@ update-site-pages-variation=Aktualizovat varianty privátních stránek
 view-page-staging-options=Zobrazit stránku pracovní možnosti (Automatic Translation)
 view-source=Zobrazit zdroj (Automatic Translation)
 x,-created-x-ago={0}, created {1} ago. (Automatic Copy)
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} je zahrnuto do přípravného procesu.
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=Právě provádíte revizi stránky. Můžete provést změny a poslat je do dalšího kroku workflow.
 you-can-also-forcibly-disable-remote-staging=You can also <a href="{0}">forcibly disable</a> remote staging. (Automatic Copy)
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=Nemůžete odeslat vaše změny, protože někdo jiný již změny ke schválení odeslal.
