--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_fi.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=Siirrä LAR tiedosto tähän, sisään tuontia va
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Dynaamisten tietolistojen rakenteen avain {0} on jo olemassa.
 enabled-on-private-pages=Ota käyttöön jäsen sivuilla
 enabled-on-public-pages=Ota käyttöön julkisilla sivuilla
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Export/Import Template (Automatic Copy)
 export-import-portlet-permissions-help=Tämän ollessa valittu, käyttöoikeudet, mitkä liittyvät ulos vietyyn portlet ikkunaan sisällytetään.
 export-import-theme-settings-help=Tämän ollessa valittuna, sivustolle valittu teema ja väriteema sisällytetään LAR tiedostoon. Sen ollessa valittuna sisään tuonnissa, teema ja väriteema asetukset tuodaan ja kaikki asetetaan käyttämään niitä.
 export-individual-deletions=Export Individual Deletions (Automatic Copy)
@@ -86,6 +88,7 @@ new-publish-template=Uusi julkaisumalli
 no-export-processes-were-found=Ulosvienti prosesseja ei löydy.
 no-import-processes-were-found=Sisääntuonti prosesseja ei löydy.
 no-pages=Sivuni
+no-processes-were-found=No processes were found. (Automatic Copy)
 no-publication-processes-were-found=Julkaisu prosesseja ei löytynyt.
 no-scheduled-publication-processes-were-found=Julkaisu prosesseja ei löydy.
 none-empty-site-pages-variation=Ei mitään (Tyhjä sivustomuunnelma)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=Tämä versio tullaan
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Etäjulkaisua ei voi kytkeä päälle sivustolle ID:llä {0}. Gloal sivusto voidaan vaiheistaa vain toisen global sivuston kanssa.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Etävalmistelua sivustolla tunnuksella {0} ei voida aktivoida. Live-etäsivuston on oltava eri kuin valmistelusivusto.
 unable-to-execute-process-x=Prosessia ({0}) ei voida suorittaa.
-untitled=Nimetön
 untitled-scheduled-publication=Nimetön ajoitettu julkaisu
 update-data=Päivitä tiedot
 update-page-variation=Päivitä sivumuunnelma
@@ -169,7 +171,21 @@ update-site-pages-variation=Päivitä sivuston sivujen muunnelmat
 view-page-staging-options=Näytä sivun vaihestetunjulkaisun asetukset
 view-source=Näytä lähde
 x,-created-x-ago={0}, luotu {1} sitten.
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} on vaiheistettu.
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=Olet parhaillaan katselmoimassa tätä sivua. Voit tehdä muutoksia ja valmistuttuasi lähettää ne seuraavalle työnkulun tasolle.
 you-can-also-forcibly-disable-remote-staging=Voit myös <a href="{0}">pakolla poistaa</a> etä-vaiheistetun julkaisun.
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=Et voi lähettää muutoksiasi, koska joku on jo lähettänyt muutoksensa hyväksyntään.
