--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_ko.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=가져오기에 고 맙 다 파일을 삭제 (Aut
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Dynamic data mapping structure with structure key {0} already exists. (Automatic Copy)
 enabled-on-private-pages=개인 페이지에서 사용할 수 (Automatic Translation)
 enabled-on-public-pages=공용 페이지에 사용 (Automatic Translation)
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=내보내기/가져오기 서식 파일 (Automatic Translation)
 export-import-portlet-permissions-help=이 선택 하는 경우 내보낸된 포틀릿 창에 할당 된 사용 권한이 포함 됩니다. (Automatic Translation)
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
 export-individual-deletions=개별 삭제 내보내기 (Automatic Translation)
@@ -86,6 +88,7 @@ new-publish-template=새 서식 파일을 게시 (Automatic Translation)
 no-export-processes-were-found=없음 내보내기 프로세스 발견 했다. (Automatic Translation)
 no-import-processes-were-found=없음 가져오기 프로세스를 발견 했다. (Automatic Translation)
 no-pages=나의 페이지
+no-processes-were-found=아니 프로세스 발견 됐다. (Automatic Translation)
 no-publication-processes-were-found=아무 게시 프로세스를 발견 했다. (Automatic Translation)
 no-scheduled-publication-processes-were-found=아니 예약 된 게시 프로세스를 발견 했다. (Automatic Translation)
 none-empty-site-pages-variation=없음 (빈 사이트 페이지 변형) (Automatic Translation)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=This version will be 
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Unable to activate remote staging on site with ID {0}. Global site can only be staged to another global site. (Automatic Copy)
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Unable to activate remote staging on site with ID {0}. The remote live site must be different from the stage site. (Automatic Copy)
 unable-to-execute-process-x=Unable to execute process ({0}). (Automatic Copy)
-untitled=제목 (Automatic Translation)
 untitled-scheduled-publication=예약 된 게시 제목된 (Automatic Translation)
 update-data=업데이트 데이터 (Automatic Translation)
 update-page-variation=Add Page Variation
@@ -169,7 +171,21 @@ update-site-pages-variation=Site Pages Variation
 view-page-staging-options=페이지 보기 옵션을 준비 (Automatic Translation)
 view-source=소스 보기 (Automatic Translation)
 x,-created-x-ago={0}, created {1} ago. (Automatic Copy)
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} is staged. (Automatic Copy)
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=현재이 페이지를 검토 하 고. 변경 하 고 준비가 되 면 워크플로의 다음 단계로 그들을 보낼 수 있습니다. (Automatic Translation)
 you-can-also-forcibly-disable-remote-staging=You can also <a href="{0}">forcibly disable</a> remote staging. (Automatic Copy)
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=또한 다른 사람이 이미 승인을 받기 위해 변경 내용을 제출 하기 때문에 변경 내용을 제출 하지. (Automatic Translation)
