--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_lt.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=Drop a LAR File to Import (Automatic Copy)
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Dynamic data mapping structure with structure key {0} already exists. (Automatic Copy)
 enabled-on-private-pages=Įjungtas asmeninis puslapiai (Automatic Translation)
 enabled-on-public-pages=Įjungtas viešųjų puslapių (Automatic Translation)
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Eksporto/importo šablonas (Automatic Translation)
 export-import-portlet-permissions-help=Jeigu tai yra pažymėtas, priskirtas eksportuojamų portalo įskiepio lango teises yra įtraukti. (Automatic Translation)
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
 export-individual-deletions=Eksportuoti atskirus naikinimai (Automatic Translation)
@@ -86,6 +88,7 @@ new-publish-template=New Publish Template (Automatic Copy)
 no-export-processes-were-found=No export processes were found. (Automatic Copy)
 no-import-processes-were-found=No import processes were found. (Automatic Copy)
 no-pages=No Pages (Automatic Copy)
+no-processes-were-found=Nerasta jokių procesus. (Automatic Translation)
 no-publication-processes-were-found=No publication processes were found. (Automatic Copy)
 no-scheduled-publication-processes-were-found=Nerasta jokių reguliaraus paskelbimo procesus. (Automatic Translation)
 none-empty-site-pages-variation=None (Empty Site Pages Variation) (Automatic Copy)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=This version will be 
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Unable to activate remote staging on site with ID {0}. Global site can only be staged to another global site. (Automatic Copy)
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Unable to activate remote staging on site with ID {0}. The remote live site must be different from the stage site. (Automatic Copy)
 unable-to-execute-process-x=Unable to execute process ({0}). (Automatic Copy)
-untitled=Be pavadinimo (Automatic Translation)
 untitled-scheduled-publication=Be pavadinimo reguliaraus paskelbimo (Automatic Translation)
 update-data=Update Data (Automatic Copy)
 update-page-variation=Update Page Variation (Automatic Copy)
@@ -169,7 +171,21 @@ update-site-pages-variation=Update Site Pages Variation (Automatic Copy)
 view-page-staging-options=Peržiūrėti puslapį sustojimo parinktys (Automatic Translation)
 view-source=Peržiūrėti šaltinį (Automatic Translation)
 x,-created-x-ago={0}, created {1} ago. (Automatic Copy)
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} is staged. (Automatic Copy)
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=You are currently reviewing this page. You can make changes and send them to the next step in the workflow when ready. (Automatic Copy)
 you-can-also-forcibly-disable-remote-staging=You can also <a href="{0}">forcibly disable</a> remote staging. (Automatic Copy)
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=You cannot submit your changes because someone else has already submitted changes for approval. (Automatic Copy)
