--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_nl_BE.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=Drop een LAR-bestand importeren (Automatic Transl
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Dynamic data mapping structure with structure key {0} already exists. (Automatic Copy)
 enabled-on-private-pages=Privé pagina's ingeschakeld (Automatic Translation)
 enabled-on-public-pages=Ingeschakeld op Public Pages (Automatic Translation)
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Export/Import Template (Automatic Copy)
 export-import-portlet-permissions-help=Als dit selectievakje is ingeschakeld, zijn de machtigingen die zijn toegewezen voor het geëxporteerde portlet venster opgenomen. (Automatic Translation)
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
 export-individual-deletions=Export Individual Deletions (Automatic Copy)
@@ -86,6 +88,7 @@ new-publish-template=Nieuwe sjabloon publiceren (Automatic Translation)
 no-export-processes-were-found=Geen uitvoer processen werden gevonden. (Automatic Translation)
 no-import-processes-were-found=Geen invoer processen werden gevonden. (Automatic Translation)
 no-pages=Mijn pagina’s
+no-processes-were-found=No processes were found. (Automatic Copy)
 no-publication-processes-were-found=Geen publicatie processen werden gevonden. (Automatic Translation)
 no-scheduled-publication-processes-were-found=Geen geplande publicatie processen werden gevonden. (Automatic Translation)
 none-empty-site-pages-variation=Geen (Lege sitepaginavariant)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=Deze versie wordt gep
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Unable to activate remote staging on site with ID {0}. Global site can only be staged to another global site. (Automatic Copy)
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Unable to activate remote staging on site with ID {0}. The remote live site must be different from the stage site. (Automatic Copy)
 unable-to-execute-process-x=Unable to execute process ({0}). (Automatic Copy)
-untitled=Untitled (Automatic Translation)
 untitled-scheduled-publication=Untitled Scheduled Publication (Automatic Copy)
 update-data=Gegevens bijwerken (Automatic Translation)
 update-page-variation=Add Page Variation
@@ -169,7 +171,21 @@ update-site-pages-variation=Site Pages Variation
 view-page-staging-options=Weergavepagina enscenering opties (Automatic Translation)
 view-source=View Source (Automatic Copy)
 x,-created-x-ago={0}, created {1} ago. (Automatic Copy)
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} is gefaseerd.
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=U bent deze pagina aan het beoordelen. U kunt veranderingen aanbrengen en deze naar de volgende stap in de werkstroom zenden als u klaar bent.
 you-can-also-forcibly-disable-remote-staging=You can also <a href="{0}">forcibly disable</a> remote staging. (Automatic Copy)
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=U kunt uw veranderingen niet verzenden omdat iemand anders al veranderingen ter goedkeuring heeft verzonden.
