--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_pl.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=Upuść tu plik LAR, by go zaimportować
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Struktura dynamicznego mapowania danych z kluczem {0} już istnieje.
 enabled-on-private-pages=Włączone na prywatnych stronach (Automatic Translation)
 enabled-on-public-pages=Włączone na publicznych stronach (Automatic Translation)
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Szablon eksportu/importu (Automatic Translation)
 export-import-portlet-permissions-help=Jeśli to pole jest zaznaczone, uprawnienia przypisane dla okna wywożonych portletu są uwzględniane. (Automatic Translation)
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
 export-individual-deletions=Eksport indywidualnych usunięć (Automatic Translation)
@@ -86,6 +88,7 @@ new-publish-template=New Publish Template (Automatic Copy)
 no-export-processes-were-found=Nie znaleziono procesów eksportujących.
 no-import-processes-were-found=Nie ma żadnych procesów importu.
 no-pages=Moje strony
+no-processes-were-found=Zostały znalezione żadne procesy. (Automatic Translation)
 no-publication-processes-were-found=Nie znaleziono procesów publikacji.
 no-scheduled-publication-processes-were-found=Nie znaleziono procesów publikacji.
 none-empty-site-pages-variation=Brak (Nie ma wariantów stron witryny)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=Ta wersja zostanie op
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Unable to activate remote staging on site with ID {0}. Global site can only be staged to another global site. (Automatic Copy)
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Unable to activate remote staging on site with ID {0}. The remote live site must be different from the stage site. (Automatic Copy)
 unable-to-execute-process-x=Nie można uruchomić procesu ({0}).
-untitled=Bez tytułu (Automatic Translation)
 untitled-scheduled-publication=Bez tytułu publikacji zaplanowane (Automatic Translation)
 update-data=Aktualizuj dane
 update-page-variation=Aktualizuj wariant strony
@@ -169,7 +171,21 @@ update-site-pages-variation=Aktualizuj wariant strony witryny
 view-page-staging-options=Zobacz stronę tymczasowej opcje (Automatic Translation)
 view-source=Widok źródła (Automatic Translation)
 x,-created-x-ago={0}, created {1} ago. (Automatic Copy)
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} jest w środowisku testowym.
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=Obecnie przeglądasz tą stronę. Możesz wprowadzić zmiany i wysłać je dalej w przepływie zadań.
 you-can-also-forcibly-disable-remote-staging=You can also <a href="{0}">forcibly disable</a> remote staging. (Automatic Copy)
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=Nie możesz wprowadzić zmian, ponieważ ktoś inny w tym czasie wysłał już zmiany do zatwierdzenia.
