--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_pt_PT.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=Arraste e solte um ficheiro LAR para importar
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=A estrutura de mapeamento de dados dinâmicos com a chave {0} já existe.
 enabled-on-private-pages=Habilitado em Páginas Privadas
 enabled-on-public-pages=Habilitado em Páginas Públicas
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Modelo de exportação/importação (Automatic Translation)
 export-import-portlet-permissions-help=Se marcado, as permissões dadas à janela da portlet exportada serão incluídas.
 export-import-theme-settings-help=Quando selecionado na exportação, o tema e esquema de cores selecionados para o site são incluídos nos ficheiros LAR resultantes. Quando selecionado na importação, as configurações do tema e esquema de cores são importadas, sendo que todas as páginas ficam configuradas para as utilizar.
 export-individual-deletions=Exclusões individuais de exportação (Automatic Translation)
@@ -86,6 +88,7 @@ new-publish-template=Novo Template de Publicação
 no-export-processes-were-found=Nenhum processo de exportação foi encontrado.
 no-import-processes-were-found=Nenhum processo de importação foi encontrado.
 no-pages=Nenhuma Página
+no-processes-were-found=Não há processos foram encontrados. (Automatic Translation)
 no-publication-processes-were-found=Nenhum processo de publicação foi encontrado.
 no-scheduled-publication-processes-were-found=Nenhum processo de publicação agendado foi encontrado.
 none-empty-site-pages-variation=Nenhuma (Variantes da Página do Site Vazia)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=Esta versão será pu
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Não é possível ativar staging remoto no site com ID {0}. O staging de um site global só pode ser feito para outro site global.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Não foi possível ativar o ambiente de staging remoto no site com ID {0}. O site remoto de produção deve ser diferente do site de staging.
 unable-to-execute-process-x=Não foi possível executar o processo ({0}).
-untitled=Sem Título
 untitled-scheduled-publication=Publicação Agendada sem Título
 update-data=Atualizar Dados
 update-page-variation=Atualizar Variante da Página
@@ -169,7 +171,21 @@ update-site-pages-variation=Atualizar Variante das Páginas do Site
 view-page-staging-options=Ver Opções para Staging de Páginas
 view-source=Ver Código Fonte
 x,-created-x-ago={0}, criada à {1} atrás.
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} está em staging.
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=Está a rever esta página. Pode fazer alterações e enviá-las para o próximo passo do workflow quando estiver pronto.
 you-can-also-forcibly-disable-remote-staging=Também pode <a href="{0}">desativar à força</a> o staging remoto.
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=Não pode enviar as suas alterações porque outra pessoa já enviou alterações para aprovação.
