--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_sk.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=Presuňte LAR súbor na import
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=Mapovacia štruktúra s kľúčom {0} už existuje.
 enabled-on-private-pages=Povolené na súkromných stránkach
 enabled-on-public-pages=Povolené na verejných stránkach
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=Export/Import šablóny (Automatic Translation)
 export-import-portlet-permissions-help=Ak je toto zaškrtnuté, oprávnenie priradené pre exportované okno portletu budú zahrnuté.
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
 export-individual-deletions=Exportovať jednotlivé odstránenia (Automatic Translation)
@@ -86,6 +88,7 @@ new-publish-template=Nová šablóna publikovania
 no-export-processes-were-found=Nenašli sa žiadne procesy exporu.
 no-import-processes-were-found=Nenašli sa žiadne procesy importu.
 no-pages=Moje stránky
+no-processes-were-found=Nenašli sa žiadne procesy. (Automatic Translation)
 no-publication-processes-were-found=Nenašli sa žiadne procesy publikovania.
 no-scheduled-publication-processes-were-found=Nenašli sa žiadne procesy publikovania.
 none-empty-site-pages-variation=Žiadny (prázdny variant súkromných stránok)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=Táto verzia bude pub
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=Nedá sa aktivovať vzdialená príprava na sídle s ID {0}. Globálne sídlo môže byť pripravované len do iného globálneho sídla.
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=Nepodarilo sa aktivovať prípravné prostredie na sídle s ID {0}. Vzdialené produkčné sídlo musí byť rozdielne od prípravného sídla.
 unable-to-execute-process-x=Nemôžem vykonať proces ({0}).
-untitled=Bez názvu (Automatic Translation)
 untitled-scheduled-publication=Nepomenované vzdialené publikovanie
 update-data=Aktualizovať údaje
 update-page-variation=Aktualizovať variant stránky
@@ -169,7 +171,21 @@ update-site-pages-variation=Aktualizovať variant stránok sídla
 view-page-staging-options=Zobraziť stránku oddychových možností (Automatic Translation)
 view-source=Zobraziť zdroj
 x,-created-x-ago={0}, created {1} ago. (Automatic Copy)
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} je predpripravované.
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=Práve kontrolujete túto stránku. Môžete urobiť zmeny a keď ste hotoví, poslať ich do ďalšieho kroku workflow.
 you-can-also-forcibly-disable-remote-staging=Tiež môžete <a href="{0}">nasilu zakázať</a> vzdialené prípravné prostredie.
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=Vaše zmeny nemôžete odoslať, pretože niekto iný už odoslal zmeny na schválenie.
