--- a/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/web-experience/staging/staging-lang/src/main/resources/content/Language_zh_TW.properties
@@ -41,6 +41,8 @@ drop-a-lar-file-here-to-import=放一個LAR檔以上傳
 dynamic-data-mapping-structure-with-structure-key-x-already-exists=有結構鍵值 {0} 的動態資料對映結構已經存在。
 enabled-on-private-pages=啟用在私密頁面
 enabled-on-public-pages=啟用在公開頁面
+error-x-cannot-be-found=Error: {0} cannot be found. (Automatic Copy)
+export-import-configuration=匯出/導入範本 (Automatic Translation)
 export-import-portlet-permissions-help=如果這被核選，指派給匯入Portlet視窗的權限將會被包含。
 export-import-theme-settings-help=When selected on export, the theme and color scheme chosen for the site are included in the resulting LAR files. When selected on import, the theme and color scheme settings are imported and all the pages are configured to use them.
 export-individual-deletions=匯出單個刪除 (Automatic Translation)
@@ -86,6 +88,7 @@ new-publish-template=新增出版版型
 no-export-processes-were-found=找不到匯出動作。
 no-import-processes-were-found=找不到匯入動作。
 no-pages=沒有頁面
+no-processes-were-found=沒有進程被發現。 (Automatic Translation)
 no-publication-processes-were-found=找不到出版動作。
 no-scheduled-publication-processes-were-found=找不到出版動作。
 none-empty-site-pages-variation=無(空站台頁面變更)
@@ -161,7 +164,6 @@ this-version-will-be-published-when-x-is-published-to-live=當<em>{0}</em>出版
 unable-to-activate-remote-staging-on-site-with-id-x.-global-site-can-only-be-staged-to-another-global-site=不能在ID {0} 的站台啟用遠端階段。全域站台只能設定階段於其他全域站台。
 unable-to-activate-remote-staging-on-site-with-id-x.-the-remote-live-site-must-be-different-from-the-stage-site=無法啟用遠端階段中在ID {0} 的站台。遠端Live站台必須不同於階段站台。
 unable-to-execute-process-x=不能執行流程 ({0})。
-untitled=無題 (Automatic Translation)
 untitled-scheduled-publication=無標題的已排程出版
 update-data=更新資料
 update-page-variation=更新頁面變更
@@ -169,7 +171,21 @@ update-site-pages-variation=更新站台頁面變更
 view-page-staging-options=查看頁面分期選項 (Automatic Translation)
 view-source=檢視原始碼
 x,-created-x-ago={0}, created {1} ago. (Automatic Copy)
+x-export-layout-process-failed={0} Export process failed (Automatic Copy)
+x-export-layout-process-finished-successfully={0} Export process finished successfully (Automatic Copy)
+x-export-portlet-process-failed={0} Portlet Export process failed (Automatic Copy)
+x-export-portlet-process-finished-successfully={0} Portlet Export process finished successfully (Automatic Copy)
+x-import-layout-process-failed={0} Import process failed (Automatic Copy)
+x-import-layout-process-finished-successfully={0} Import process finished successfully (Automatic Copy)
+x-import-portlet-process-failed={0} Portlet Import process failed (Automatic Copy)
+x-import-portlet-process-finished-successfully={0} Portlet Import process finished successfully (Automatic Copy)
 x-is-staged={0} 在階段中。
+x-publish-layout-local-process-failed={0} Local Publication process failed (Automatic Copy)
+x-publish-layout-local-process-finished-successfully={0} Local Publication process finished successfully (Automatic Copy)
+x-publish-layout-remote-process-failed={0} Remote Publication process failed (Automatic Copy)
+x-publish-layout-remote-process-finished-successfully={0} Remote Publication process finished successfully (Automatic Copy)
+x-publish-portlet-process-failed={0} Portlet Publication process failed (Automatic Copy)
+x-publish-portlet-process-finished-successfully={0} Portlet Publication process finished successfully (Automatic Copy)
 you-are-currently-reviewing-this-page.-you-can-make-changes-and-send-them-to-the-next-step-in-the-workflow-when-ready=您正在評論這頁面。您可以製作改變並當準備好時送出他們到流程的下一步驟。
 you-can-also-forcibly-disable-remote-staging=您也能<a href="{0}">強迫停用</a>遠端階段。
 you-cannot-submit-your-changes-because-someone-else-has-submitted-changes-for-approval=您不能送出您的變更因為有人已經送出變更以審核。
