--- a/portal-impl/src/content/Language_cs.properties
+++ b/portal-impl/src/content/Language_cs.properties
@@ -5161,6 +5161,7 @@ unread-messages=Nepřečtené zprávy
 unscramble=Uspořádat
 unsubscribe=Nesledovat
 unsubscribe-from-comments=Vypnout sledování komentářů
+untitled=Bez názvu (Automatic Translation)
 untrusted=Neověřený
 untrusted-plugin-repositories=Repozitář neprověřených zásuvných modulů
 up=Nahoru
